# mlflow_dock

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  lint.yml  release.yml  test.yml
src/mlflow_dock/: config.py  docker_service.py  main.py  security.py
tests/: conftest.py  test_config.py  test_docker_service.py  test_security.py  test_webhook.py
