[project]
name = "mlflow_dock"
version = "0.3.0"
description = "MLflow webhook receiver that automatically builds and pushes Docker images when new model versions are created"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Louis MOULIN", email = "louis.moulin@outlook.fr"}
]
keywords = ["mlflow", "docker", "webhook", "machine-learning", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.128.0",
    "mlflow>=3.8.1",
    "numpy==2.4.1",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]
